<resources>
    <string name="app_name">Путеводитель ЗабКЛИ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>

    <string name="title_olympiads">Олимпиады</string>
    <string name="title_news">Новости</string>
    <string name="title_schedule">Расписание</string>

    <string name="back_description">Назад</string>
    <string name="forward_description">Вперёд</string>

    <string name="settings_account">Аккаунт</string>
    <string name="settings_anonymous">Аноним</string>
    <string name="settings_role">Ученик</string>

    <string name="login">Логин</string>
    <string name="password_login">Пароль</string>
    <string name="password_register">Пароль (минимум 8 символов)</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>

    <string name="settings_name">Настройки</string>
    <string name="dark_mode_name">Включить тёмную тему</string>
    <string name="dark_mode_description">Делает элементы приложения темнее</string>
    <string name="changed_function_name">Отображать изменённые уроки</string>
    <string name="changed_function_description">Показывает изменённые уроки в расписании</string>

    <string name="survey_name">Анкетирование</string>
    <string name="survey_description">Пройдите опрос для улучшения приложения</string>

    <string name="edit_schedule_name">Внести изменение в расписание</string>
    <string name="edit_schedule_description">Нажмите, чтобы внести изменение в расписание самостоятельно
        (при отправке сохраняются некоторые данные о вас, чтобы можно было понятно кто вы)</string>

    <string name="ui_next_lesson_text">Следующий урок:</string>
    <string name="ui_text_schedule">Расписание</string>
    <string name="loading_lesson_name">Загрузка уроков…</string>
    <string name="loading_lesson_time">Загрузка времени уроков…</string>
    <string name="loading_day">Загрузка дня…</string>
    <string name="disable_changed_function">Похоже, что загрузка довольно долгая. Если вы хотите,
        чтобы использовалось расписание, заданное в приложение заранее, то отключите в настройках
        функцию отображения изменённых уроков</string>

    <string name="error_no_internet">Похоже, что у вас нет доступа к интернету</string>
    <string name="error_unknown">Ой… произошла ошибка</string>
    <string name="error_unknown_placeholder">Тут должно быть название ошибки. Если Вы это видите, значит всё совсем плохо</string>
    <string name="error_work_in_progress">Пока что мы ведём работы над этой частью</string>
    <string name="error_server_problem">Не удалось подключиться к серверу</string>
    <string name="error_no_olymp">Похоже олимпиад пока нет, возвращайтесь позже</string>
    <string name="error_no_schedule">Очень странно, но расписания нет</string>
</resources>