<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_schedule">

    <fragment
        android:id="@+id/navigation_schedule"
        android:name="ru.zabkli.ui.schedule.ScheduleFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/navigation_olympiads"
        android:name="ru.zabkli.ui.olympiads.OlympiadsFragment"
        android:label="@string/title_olympiads"
        tools:layout="@layout/fragment_olympiads" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="ru.zabkli.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />
</navigation>